all the handlebars/html/js/favicon/css/links

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,22 @@
+
 form.signup,
 form.login {
   margin-top: 50px;
 }
+
+body {
+  background-color: black;
+  color: white;
+}
+
+h2 {
+  color: white;
+}
+.gametext {
+    font-family: 'Press Start 2P', cursive;
+
+}
+.nudge {
+    position: relative;
+    top: 18px;
+  }
